src/css/custom.scss
/* Colors
–––––––––––––––––––––––––––––––––––––––––––––––––– */

$color-background: #fff;

$color-text-dark-1: #222;
$color-text-dark-2: #555;
$color-main: #2eb2ff;
$color-main-dark: #1d73a5;

$color-text-light: #fff;
$color-text-p: #ccc;

/* Text
–––––––––––––––––––––––––––––––––––––––––––––––––– */
p {
    color: $color-text-p;
}
h1, h2, h3, h4 {
    color: $color-text-light;
}
.dark-heading { 
    color: $color-text-dark-1;
}
.dark-p { 
    color: $color-text-dark-2;
}
.light-p { 
    color: $color-text-p;
}
.light-h { 
    color: $color-text-light;
}

/* Shared
–––––––––––––––––––––––––––––––––––––––––––––––––– */
.button {
    border-radius: 100px;
}

.button.inline-button {
    margin-bottom: 10px;
}

.button.button-primary {
    background-color: $color-main;
    border-color: $color-main;
    text-align: center;
    display: block;
    margin-left: auto;
    margin-right: auto;
    position: relative;
}

.button.button-primary:hover,
.button.button-primary:focus {
    background-color: $color-main-dark;
    border-color: $color-main-dark;
}

body {
    min-height: 100%;
}

html {
    height: 100%;
}

#app {
    min-height: 100vh;
}

.empty-column {
    height: 10px;
}

/* Sections
–––––––––––––––––––––––––––––––––––––––––––––––––– */
.section {
    padding: 8rem 0 7rem;
    text-align: center;
}
.section-low-padding {
    padding: 4rem 0 4rem;
    text-align: center;
}
.polls {
    height: inherit;
}
.section-heading,
.section-description {
    margin-bottom: 1.2rem;
}

.parallax {
    /* The image used */
    background-image: url("../images/bg-darken.jpg");

    /* Create the parallax scrolling effect */
    background-attachment: fixed;
    background-position: center;
    background-repeat: no-repeat;
    background-size: cover;
}

.square {
    position: relative;
    width: 46%;
    margin: 2%;
    float: left;
    background-color: #fff5;
}

.square:after {
    content: "";
    display: block;
    padding-bottom: 100%;
}

.content {
    position:absolute;
    top:50%; 
    height:100px; 
    width:100%;
    margin-top:-12.5%;
    text-align:center;
}

/* Sections
–––––––––––––––––––––––––––––––––––––––––––––––––– */
.tandc {
    text-align: left;
    
    padding: 20px 0;
}

/* Landing
–––––––––––––––––––––––––––––––––––––––––––––––––– */
.landing {
    height: 100%;
}

/* Marquee
–––––––––––––––––––––––––––––––––––––––––––––––––– */
.marquee-heading {
    padding-top: 10px;
    text-align: left;
}

/* Info
–––––––––––––––––––––––––––––––––––––––––––––––––– */
.info {
    background-color: #fff;
    padding-bottom: 2rem;
    padding-top: 0;
    text-align: center;
}
.info-container {
    top: -80px;
}
.value-multiplier {
    margin-bottom: .5rem;
}
.instructions {
    
}
.instructions-container {
    margin: 5rem auto;
}

.review-container {
    width: 100%;
    padding: 0 50px;
}

/* Footer
–––––––––––––––––––––––––––––––––––––––––––––––––– */
.footer {
    text-align: center;
    padding: 0;
    background-color: $color-background;
}

.costs-image {
    width: 50%;
    position: relative;
    margin: auto;
    display: block;
}

.footer-container {
    height: 60px;
}

.social-media {
    padding: 20px 0 0 0;
    margin: auto;
    width: max-content;
    cursor: pointer;

    a {
        color: $color-text-dark-2;
    }
}

.social-media a {
    text-decoration: none;
}

.social-media:hover {
    animation: poop-dance .8s infinite alternate ease-in-out;
}

@keyframes poop-dance {
    from, 49% { transform-origin: -50% 100%; }
    50%, 75%, to { transform-origin: 150% 100%; }
    25% { transform: rotate(-10deg); }
    50% { transform: rotate(0deg); }
    75% { transform: rotate(10deg); }
}

/* Navbar
–––––––––––––––––––––––––––––––––––––––––––––––––– */
.navbar {
    text-align: left;
    background-color: $color-background;
    padding: 0;
    height: 60px;
    position: fixed;
    width: 100%;
    z-index: 102;
}

.navbar-title {
    color: $color-text-dark-1;
    padding-top: 10px;
}

/* Marketplace
–––––––––––––––––––––––––––––––––––––––––––––––––– */
.marketplace {
    padding: 8rem 0 7rem;
    text-align: center;
}

.marketplace-heading {
    padding-bottom: 20px;
}

.screenshot-holder {
    /* background: #ffffff88; */
    background: none;
}

.carousel .slide {
    background: none;
}

.carousel.carousel-slider {
    /* border-radius: 10px; */
}

.carousel .slide img {
    height: auto;
}

.carousel-holder {
    max-width: 512px;
    margin: auto;
}

.options-holder {
    height: 60px;
    width: 250px;
    margin: auto;
}

.options-list, 
.options-list-minor {
    list-style: none;
    margin-bottom: 10px;
}

.options-list-minor {
    width: 355px;
    margin: auto;
    height: 40px;
}

.notes-holder {
    margin-left: 0;
}

.option,
.selected-option,
.option-minor,
.selected-option-minor {

    text-transform: uppercase;
    font-size: 11px;
    font-weight: 600;
    letter-spacing: .2rem;
    margin-right: 35px;
    text-decoration: none;
    line-height: 4.5rem;

    position: relative;
    float: left;

    transition: .2s linear all;
    cursor: pointer;

    padding: 0 15px;
    margin: 0;

    margin-right: 10px;
    border-radius: 10px;
}

.option-minor,
.selected-option-minor {
    margin-left: 0;
    line-height: 2.5em;
    /* border: none; */
    transition: .2s linear all;
    background: none;
}

.selected-option,
.selected-option-minor {
    color: $color-text-light;
    background-color: #222;
}

.option:hover,
.option-minor:hover {
    background-color: #888;
}

.info-box {
    text-align: center;
    width: max-content;
    max-width: 90%;
    margin: auto;
}

.purchase-info {
    margin-bottom: 0;
}

.purchase-holder {
    padding-bottom: 30px;
}

.paypal-button-holder {
    width: 200px;
    margin: auto;
}

.specification-key {
    color: #222;
    text-decoration: underline;
    margin: 0;
}

.specification-value {
    margin: .2em;
}

.refurbishments-title {
    
    width: 100%;
}

.container-marketplace {
    max-width: unset;
}

.phone {
    width: 100%;
    float: left;
    margin-bottom: 50px;
}

.phone-name {
    padding: 3rem 0;
}

/* Phone Page */
.phone-page-holder {
    padding: 8rem 0 7rem;
    text-align: center;
}

/** POLLING **/
#canvasjs-react-chart-container-0 {
    margin-top: 25px;
}

.poll-description {
    text-align: left;
}

/** BODYPIX GAME **/
.game-camera {
    margin: 50px auto;
    width: 640px;
}

/* Portfolio
–––––––––––––––––––––––––––––––––––––––––––––––––– */

.wide-container {
    width: 66.7%;
    margin: auto;
    padding: 3rem 0;
}

.portfolio-row {
    
}

.portfolio-image {
    width: 100%;
    max-width: 500px;
}

.portfolio-content-right {
    text-align: left;
}

/* Mobile views */
@media (max-width: 750px) {
    .costs-image {
        width: 100%;
    }
    .portfolio-content {
        text-align: center;
    }
    .empty-column {
        height: 0;
    }
    .fb-post {
        padding-bottom: 20px;
    }
    .landing {
        height: 400px;
    }
    .landing-container {
        margin-top: 80px;
    }
    .square {
        width: 90%;
        margin: auto;
    }
    .info {
        padding-bottom: 0;
    }

}

/* Bigger than 550 */
@media (min-width: 550px) {
    .section {
        padding: 12rem 0 11rem;
    }
}

/* Bigger than 750 */
@media (min-width: 750px) {
    .hero {
        height: 190px;
    }
    .hero-heading {
        font-size: 2.6rem;
    }
    .section {
        padding: 14rem 0 15rem;
    }
    .hero {
        padding: 16rem 0 14rem;
    }
    .section-description {
        max-width: 60%;
        margin-left: auto;
        margin-right: auto;
    }
    .categories {
        padding: 15rem 0 8rem;
    }
}

/* Bigger than 1000 */
@media (min-width: 1000px) {
    .section {
        padding: 20rem 0 19rem;
    }
    .hero {
        padding: 22rem 0;
    }
    .hero-heading {
        font-size: 3.0rem;
    }
}

